--- a/app/views/admin/addpost.html
+++ b/app/views/admin/addpost.html
@@ -19,77 +19,112 @@ hintahaarukka
 	<div class="col-xs-12 col-xs-offset-0 col-sm-8 col-sm-offset-2">
 		<h1>Lisää uusi arvostelu</h1>
 		<form ng-submit="vm.validatePostData()" class="form inline-form">
-			<label class="main-label">Kuva</label>
-			<label>Kopio Flickr kuvan URL klikkaamalla Flickr:ssä kuvan alalaidassa olevaa 'Share' ikonia ja maalaa 'HTML' tabin alla oleva teksti</label>
-			<input class="form-control" ng-model="vm.post.imgUrl" type="url">
-			<br>
 
-			<label class="main-label">Arvostelun otsikko:</label>
-			<input ng-model="vm.post.title" type="text" autofocus  placeholder="Esim: 'Painter's Cove Shiraz Cabernet 2014'"  class="form-control">
-			<br>
-
-			<label class="main-label">Valitse viini tyyppi:</label>
-			<div class="wine-type-choices">
-				<label>
-					<input type="radio" ng-model="vm.post.details.type" value="red">
-					Punaviini
-				</label>
-				<label>
-					<input type="radio" ng-model="vm.post.details.type" value="white">
-					Valkoviini
-				</label>
-				<label>
-					<input type="radio" ng-model="vm.post.details.type" value="rose">
-					Roseviini
-				</label>
-				<label>
-					<input type="radio" ng-model="vm.post.details.type" value="dessert">
-					Jälkiruokaviini
-				</label>
-				<label>
-					<input type="radio" ng-model="vm.post.details.type" value="sparkling">
-					Kuohuviini
-				</label>
-				<label>
-					<input type="radio" ng-model="vm.post.details.type" value="champagne">
-					Samppanja
-				</label>
+			<div class="form-section colorfocus" color-focus>
+				<label class="main-label">Arvostelun otsikko:</label>
+				<input ng-model="vm.post.title" type="text" autofocus required placeholder="Esim: 'Painter's Cove Shiraz Cabernet 2014'"  class="form-control">
 			</div>
 			<br>
 
-			<label class="main-label">Yksityiskohdat:</label>
-			<br>
-			<label>Rypäleet</label>
-			<input class="form-control" type="text" ng-model="vm.post.details.grapes.content" placeholder="Erottele pilkulla ja välilyönnillä">
-			<br>
-			<label>Tuottaja</label>
-			<input class="form-control" type="text" ng-model="vm.post.details.producer.content">
-			<br>
-			<label>Maa</label>
-			<input class="form-control" type="text" ng-model="vm.post.details.country.content">
-			<br>
-			<label>Alue</label>
-			<input class="form-control" type="text" ng-model="vm.post.details.location.content">
-			<br>
-			<label>Vuosi</label>
-			<input class="form-control" type="text" ng-model="vm.post.details.year.content">
-			<br>
-			<label>Litramäärä</label>
-			<input class="form-control" type="text" ng-model="vm.post.details.litres.content" placeholder="Esim: 0.75 tai 1">
+			<div class="form-section" color-focus>
+				<label class="main-label">Kuva</label>
+				<span class="help-text">Kopio Flickr kuvan URL klikkaamalla Flickr:ssä kuvan alalaidassa olevaa 'Share' ikonia ja maalaa 'HTML' tabin alla oleva teksti.</span>
+				<input class="form-control" ng-model="vm.post.imgUrl" type="url">
+			</div>
 			<br>
 
-			<label class="main-label">Kuvaus:</label><textarea ng-model="vm.post.description" type="text"  placeholder="Anna kuvaus" class="form-control"></textarea>
+			<div class="form-section" color-focus>
+				<label class="main-label">Valitse viini tyyppi:</label>
+				<div class="wine-type-choices">
+					<label>
+						<input type="radio" ng-model="vm.post.details.type" value="red">
+						Punaviini
+					</label>
+					<label>
+						<input type="radio" ng-model="vm.post.details.type" value="white">
+						Valkoviini
+					</label>
+					<label>
+						<input type="radio" ng-model="vm.post.details.type" value="rose">
+						Roseviini
+					</label>
+					<label>
+						<input type="radio" ng-model="vm.post.details.type" value="dessert">
+						Jälkiruokaviini
+					</label>
+					<label>
+						<input type="radio" ng-model="vm.post.details.type" value="sparkling">
+						Kuohuviini
+					</label>
+					<label>
+						<input type="radio" ng-model="vm.post.details.type" value="champagne">
+						Samppanja
+					</label>
+				</div>
+			</div>
 			<br>
 
-			<label class="main-label">Mitkä ruoat sopivat tämän viinin kanssa:</label>
-			<label>Paina 'Ctrl' tai 'Cmd' pohjassa lisääksesi monta vaihtoehtoa</label>
+			<div class="form-section" color-focus>
+				<label class="main-label">Yksityiskohdat:</label>
+				<span class="help-text">(Huom! Voit jättää kenttiä tyhjiksi)</span>
+				<br>
+				<label>Rypäleet</label>
+				<span class="help-text">Kun alat kirjoittamaan voit valita rypäleen aukeavasta listasta tai kirjoittaa uuden rypäleen nimen ja painaa rivinvaihtoa.</span>
+				<tags-input ng-model="vm.post.details.grapes.content" placeholder="Kirjoita rypäleen nimi">
+			    	<auto-complete source="vm.loadAutocompleteTags($query)"></auto-complete>
+			    </tags-input>
+				<!-- <input class="form-control" type="text" ng-model="vm.post.details.grapes.content" placeholder="Erottele pilkulla ja välilyönnillä"> -->
+				<br>
+				<label>Vuosi</label>
+				<input class="form-control" type="number" min="1800" max="{{vm.currentYear}}" ng-model="vm.post.details.year.content" required>
+				<br>
+				<label>Tuottaja</label>
+				<input class="form-control" type="text" ng-model="vm.post.details.producer.content" required>
+				<br>
+				<label>Maa</label>
+				<input class="form-control" type="text" ng-model="vm.post.details.country.content" required>
+				<br>
+				<label>Alue</label>
+				<input class="form-control" type="text" ng-model="vm.post.details.location.content">
+				<br>
+				<label>Palsta</label>
+				<input class="form-control" type="text" ng-model="vm.post.details.plot.content">
+				<br>
+				<label>Litramäärä</label>
+				<input class="form-control" type="text" ng-model="vm.post.details.litres.content" placeholder="Esim: 0.75 tai 1">
+				<br>
+				<label>Hintaluokka</label>
+				<input class="form-control" type="text" ng-model="vm.post.details.price.content" placeholder="Esim: 10€ tai 25€">
+			</div>
 			<br>
-			<select ng-model="vm.post.foodOptions" multiple class="form-control" ng-options="option for option in vm.foodOptions">
-			</select>
+
+			<div class="form-section" color-focus>
+				<label class="main-label">Kuvaus:</label>
+				<textarea ng-model="vm.post.description" type="text" required placeholder="Anna vapaamuotoinen kuvaus viinistä" class="form-control"></textarea>
+			</div>
+			<br>
+
+			<div class="form-section" color-focus>
+				<label class="main-label">Mitkä ruoat sopivat tämän viinin kanssa:</label>
+				<span class="help-text">Paina 'Ctrl' tai 'Cmd' pohjassa lisääksesi monta vaihtoehtoa</span>
+				<br>
+				<select ng-model="vm.post.foodOptions" multiple class="form-control" ng-options="option for option in vm.foodOptions">
+				</select>
+			</div>
 			<br>
 			<br>
 
-			<label class="main-label">Arvosana:</label><input ng-model="vm.post.rating" type="number" min="0" max="100"  placeholder="Anna arvosana" class="form-control">
+			<div class="form-section wine-category-choices" color-focus>
+				<label ng-repeat="category in vm.categoryOptions" style="margin-left:10px;">
+					<input type="radio" ng-model="vm.post.category" ng-value="category">
+					{{category}}
+				</label>
+			</div>
+			<br>
+			<div class="form-section" color-focus>
+				<label class="main-label">Arvosana:</label>
+				<input ng-model="vm.post.rating" type="number" min="0" max="5"  placeholder="Anna arvosana" class="form-control">
+			</div>
 			<br>
 			<button class="btn btn-success" type="submit">Tallenna</button>
 		</form>
